# onskor

./: .gitignore  Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml  setup.cfg
flex/: models.py
flex/migrations/: 0001_initial.py  0002_flexpage_content.py  0003_auto_20200730_1810.py  0004_auto_20200730_1845.py  0005_auto_20200731_1706.py
home/: models.py
home/migrations/: 0003_homepage_banner_title.py  0004_auto_20200728_1609.py  0005_auto_20200730_0823.py
onskor/: urls.py  wsgi.py
onskor/settings/: base.py  dev.py
onskor/templates/: base.html
onskor/templates/flex/: flex.html
onskor/templates/home/: home.html  home_page.html
onskor/templates/streams/: card_block.html  title_and_text_block.html
streams/: blocks.py
