[tool.poetry]
name = "onskor"
version = "0.1.0"
description = ""
authors = ["Lektor <denislour@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=3.0,<3.1"
wagtail = ">=2.9,<2.10"
flake8 = "^3.8.3"
django-debug-toolbar = "^2.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"
pylint = "^2.5.3"
flake8 = "^3.8.3"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
